arreglos en sobre nosotros

--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
                 <ul id="mainMenu" class="main-menu">
                         
                     <li class="item-main-menu"><a class="item-menu" href="#">Inicio</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="productos.html">Productos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="categoria.html">Productos</a></li>
                     <li class="item-main-menu"><a class="item-menu" href="nosotros.html">Sobre nosotros</a></li>
                     <li class="item-main-menu"><a class="item-menu" href="#">Contactenos</a></li>
                     <li class="item-main-menu"><a class="item-menu" href="#">Otros</a></li>
