--- a/nosotros.html
+++ b/nosotros.html
@@ -7,48 +7,27 @@
     <link rel="stylesheet" href="css/nosotros.css">
 </head>
 <body>
-    <!--  -->
-    <div class="main-page">
-        <header class="box">
-            <div id="mainLogo" class="logo style-titulo"><!-- PAMICAL --></div>
-            <div id="mainMenu1" class="main-menu style-text">      
-                 <!-- -->
-                <label id="barMenu" class="bar-menu">&#9776</label>
-                <ul id="mainMenu" class="main-menu">
-                        
-                    <li class="item-main-menu"><a class="item-menu" href="#">Inicio</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="productos.html">Productos</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="nosotros.html">Sobre nosotros</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="#">Contactenos</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="#">Otros</a></li>
-                </ul>
-            </div>
-        </header>
-        <!--  -->
-
-    <div class="box">
-
         <div>
-            <img class="foto" src="img/karen2.jpg" alt="">
+            <img  src="img/karen2.jpg" alt="">
             <label class="nombre-programador">Nombre: Karen Viviana Diaz Guevara</label><br>
             <label class="correo">Correo Electrónico: kvdiaz82@soy.sena.edu.co</label><br>
             <label class="telefono">Teléfono: 320 8659449</label><br>
         </div>
 
         <div>
-            <img class="foto" src="img/Daniela.jpg" alt="">
+            <img src="img/Daniela.jpg" alt="">
             <label class="nombre-programador">Nombre: Sharit Daniela Vargas Almario</label><br>
             <label class="correo">Correo Electrónico: sharit.vargas@soy.sena.edu.co</label><br>
             <label class="telefono">Teléfono: 320 9621198</label><br> 
         </div>
         <div>
-            <img class="foto" src="" alt="">
+            <img src="" alt="">
             <label class="nombre-programador">Nombre: José Dario Zamora Vargas</label><br>
             <label class="correo">Correo Electrónico: darjosez@soy.sena.edu.co</label><br>
             <label class="telefono">Teléfono: 318 8690317</label> <br>
         </div>
         <div>
-            <img class="foto" src="img/juan.jpg" alt="">
+            <img  src="img/juan.jpg" alt="">
             <label class="nombre-programador">Nombre: Juan Camilo Realpe Ceron</label><br>
             <label class="correo">Correo Electrónico: juan.realpe@soy.sena.edu.co</label><br>
             <label class="telefono">Teléfono: 315 7874593</label><br>
