arreglo en archivos

--- a/nosotros.html
+++ b/nosotros.html
@@ -5,33 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="css/nosotros.css">
+    <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
-        <div>
-            <img  src="img/karen2.jpg" alt="">
-            <label class="nombre-programador">Nombre: Karen Viviana Diaz Guevara</label><br>
-            <label class="correo">Correo Electrónico: kvdiaz82@soy.sena.edu.co</label><br>
-            <label class="telefono">Teléfono: 320 8659449</label><br>
+    <!--  -->
+    <div class="main-page">
+        <header class="box">
+            <div id="mainLogo" class="logo"><!-- Logo --></div>
+            <div id="mainMenu1" class="main-menu1 style-text">      
+                 <!-- -->
+                <label id="barMenu" class="bar-menu">&#9776</label>
+                <ul id="mainMenu" class="main-menu">
+                        
+                    <li class="item-main-menu"><a class="item-menu" href="inicio.html">Inicio</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="categoria.html">Productos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="nosotros.html">Sobre nosotros</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="contactos.html">Contactenos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="productos.html">Otros</a></li>
+                </ul>
+            </div>
+        </header>
+        <!--  -->
+        <div class="main-content">
+        <article class=" article article-1">
+            <div class="style-img img-article"><!-- img Article --></div>
+        </article>
+        <div class="text-article-1">
+            <span >Nombre: Sharit Daniela Vargas Almario</span>
+            <span >Correo Electrónico:sharit.vargas@soy.sena.edu.co</span>
+            <span >Teléfono: 320 8659449</span>
         </div>
 
-        <div>
-            <img src="img/Daniela.jpg" alt="">
-            <label class="nombre-programador">Nombre: Sharit Daniela Vargas Almario</label><br>
-            <label class="correo">Correo Electrónico: sharit.vargas@soy.sena.edu.co</label><br>
-            <label class="telefono">Teléfono: 320 9621198</label><br> 
+        <article class=" article article-2">
+            <div class="style-img img-article"><!-- img Article --></div>
+        </article>
+        <div class="text-article-2">
+            <span >Nombre: Karen Viviana Diaz Guevara</span>
+            <span >Correo Electrónico: sharit.vargas@soy.sena.edu.co</span>
+            <span >Teléfono: 320 8659449</span>
         </div>
-        <div>
-            <img src="" alt="">
-            <label class="nombre-programador">Nombre: José Dario Zamora Vargas</label><br>
-            <label class="correo">Correo Electrónico: darjosez@soy.sena.edu.co</label><br>
-            <label class="telefono">Teléfono: 318 8690317</label> <br>
+
+        <article class="article article-3">
+            <div class=" style-img img-article"><!-- img Article --></div>
+        </article>
+        <div class="text-article-3">
+            <span>Nombre: José Dario Zamora Vargas</span>
+            <span>Correo Electrónico: darjosez@soy.sena.edu.co</span>
+            <span>Teléfono: 318 8690317</span>
         </div>
-        <div>
-            <img  src="img/juan.jpg" alt="">
-            <label class="nombre-programador">Nombre: Juan Camilo Realpe Ceron</label><br>
-            <label class="correo">Correo Electrónico: juan.realpe@soy.sena.edu.co</label><br>
-            <label class="telefono">Teléfono: 315 7874593</label><br>
+
+        <article class="article article-4">
+            <div class=" style-img img-article"><!-- img Article --></div>
+        </article>
+        <div class="text-article-4">
+            <span>Nombre: Juan Camilo Realpe Ceron</span>
+            <span>Correo Electrónico: juan.realpe@soy.sena.edu.co</span>
+            <span>Teléfono: 315 7874593</span>
         </div>
-    </div>
+    </div>    
+</div>
+
+    <script src="js/nosotros.js"></script>
+    
 </body>
 </html>
