--- a/categoria.html
+++ b/categoria.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="todo">
-<h1>Bienvenidos </h1>
+      <div class="barra">
+        <h1>Bienvenidos </h1>
+      </div>
         <div class="container">
             <div class="card">
               <div class="face face1">
