--- a/contactos.html
+++ b/contactos.html
@@ -7,22 +7,37 @@
     <link rel="stylesheet" href="css/contactos.css">
 </head>
 <body>
-    <nav class="main-nav">
-        <ul id="mainMenu" class="main-menu">
-            <li  class="primero-style"><a href="#">CONTACTOS</a></li> 
-        </ul>  
-    </nav>
+    <div class="main-page">
+        <header class="box">
+            <div id="mainLogo" class="logoprincipal">
+                <img src="img/img_principal_pamical_500x500.png" alt="">
+            </div>
+            <div id="mainMenu1" class="main-menu1 style-text">      
+                 <!-- -->
+                <label id="barMenu" class="bar-menu">&#9776</label>
+                <ul id="mainMenu" class="main-menu">
+                        
+                    <li class="item-main-menu"><a class="item-menu" href="inicio.html">Inicio</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="categoria.html">Productos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="nosotros.html">Sobre nosotros</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="contactos.html">Contactenos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="productos.html">Otros</a></li>
+                </ul>
+            </div>
+        </header>
+
+
     <div class="box">
-        <div>
+        <div >
         <img class="logo1" src="img/Logo-timacal.jpg" alt="">
-        <label class="nombre-propietario">Nombre : Rodrigo Diaz</label><br>
-        <label for="telefono">Teléfono: 311 2806259</label><br>
-        <label for="correo">Correo Electronico: </label>
+        <label>Nombre : Rodrigo Diaz</label><br>
+        <label>Teléfono: 311 2806259</label><br>
+        <label>Correo Electronico: </label>
     </div>
 
     <div>
-        <img class="logo" src="img/WhatsApp Image 2023-07-07 at 9.17.32 AM.jpeg" alt="">
-        <label class="nombre-propietario">Nombre: María Yobaira Almario Guzmán</label><br>
+        <img class="logo2" src="img/WhatsApp Image 2023-07-07 at 9.17.32 AM.jpeg" alt="">
+        <label>Nombre: María Yobaira Almario Guzmán</label><br>
         <label for="telefono">Teléfono: 310 4205871</label><br>
         <label for="correo">Correo Electrónico: yobairalmario@gmail.com</label>
     </div>
@@ -33,6 +48,7 @@
         <label for="correo">Correo Electrónico: </label>
     </div>
     </div>
-    
+    </div>
+    <script src="js/contactenos.js"></script>
 </body>
 </html>
