--- a/panaderia.html
+++ b/panaderia.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="css/panaderia.css">
 </head>
 <body>
-    <nav class="main-nav">
-        <ul id="mainMenu" class="main-menu">
-            <li  class="primero-style"><a href="#">Productos</a></li> 
-        </ul>  
-    </nav>
+    <div class="main-page">
+        <header class="box">
+            <div id="mainLogo" class="logo"><!-- Logo --></div>
+            <div id="mainMenu1" class="main-menu1 style-text">      
+                 <!-- -->
+                <label id="barMenu" class="bar-menu">&#9776</label>
+                <ul id="mainMenu" class="main-menu">
+                        
+                    <li class="item-main-menu"><a class="item-menu" href="inicio.html">Inicio</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="categoria.html">Productos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="nosotros.html">Sobre nosotros</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="contactos.html">Contactenos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="productos.html">Otros</a></li>
+                </ul>
+            </div>
+        </header>
     <div>
         <img src="" alt="">
         <label class="nombre-producto"></label>
@@ -28,5 +39,7 @@
         <label class="nombre-producto"></label>
         <label for="precio-producto">$</label>
     </div>
+    </div>
+    <script src="js/panaderia.js"></script>
 </body>
 </html>
