--- a/productos.html
+++ b/productos.html
@@ -18,10 +18,10 @@
                 <ul id="mainMenu" class="main-menu">
                         
                     <li class="item-main-menu"><a class="item-menu" href="inicio.html">Inicio</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="">Productos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="categoria.html">Productos</a></li>
                     <li class="item-main-menu"><a class="item-menu" href="nosotros.html">Sobre nosotros</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="#">Contactenos</a></li>
-                    <li class="item-main-menu"><a class="item-menu" href="#">Otros</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="contactos.html">Contactenos</a></li>
+                    <li class="item-main-menu"><a class="item-menu" href="productos.html">Otros</a></li>
                 </ul>
             </div>
         </header>
