--- a/contactos.html
+++ b/contactos.html
@@ -28,7 +28,7 @@
 
 
     <div class="box">
-        <div >
+        <div class="datos">
         <img class="logo1" src="img/Logo-timacal.jpg" alt="">
         <label>Nombre : Rodrigo Diaz</label><br>
         <label>Teléfono: 311 2806259</label><br>
@@ -38,14 +38,14 @@
     <div>
         <img class="logo2" src="img/WhatsApp Image 2023-07-07 at 9.17.32 AM.jpeg" alt="">
         <label>Nombre: María Yobaira Almario Guzmán</label><br>
-        <label for="telefono">Teléfono: 310 4205871</label><br>
-        <label for="correo">Correo Electrónico: yobairalmario@gmail.com</label>
+        <label>Teléfono: 310 4205871</label><br>
+        <label>Correo Electrónico: yobairalmario@gmail.com</label>
     </div>
     <div>
-        <img src="" alt="">
-        <label class="nombre-propietario">Nombre: </label>
-        <label for="telefono">Teléfono: </label>
-        <label for="correo">Correo Electrónico: </label>
+        <img class="logo3"  src="img/LOGOdario.jpg" alt="">
+        <label>Nombre: Nayla Cristiana Vargas Ataque </label><br>
+        <label>Teléfono: 315 8716879 </label><br>
+        <label>Correo Electrónico: </label>
     </div>
     </div>
     </div>
