--- a/contactos.html
+++ b/contactos.html
@@ -45,7 +45,7 @@
         <img class="logo3"  src="img/LOGOdario.jpg" alt="">
         <label>Nombre: Nayla Cristiana Vargas Ataque </label><br>
         <label>Teléfono: 315 8716879 </label><br>
-        <label>Correo Electrónico: </label>
+        <label>Correo Electrónico: naylacristina1979@yahoo.es</label>
     </div>
     </div>
     </div>
